# lox-interpreter-rust

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  run.sh  test.sh
course/: README.md  progress.md
course/01-scanning/: 00-overview.md  01-empty-file.md  02-parentheses.md  03-braces.md  04-single-char-tokens.md  05-lexical-errors.md  06-assignment-equality.md  07-negation-inequality.md  08-relational.md  09-division-comments.md  10-whitespace.md  11-multiline-errors.md  12-string-literals.md  13-number-literals.md  14-identifiers.md  15-reserved-words.md
course/02-parsing-expressions/: 00-overview.md  16-booleans-nil.md  17-number-literals.md  18-string-literals.md  19-parentheses.md  20-unary.md  21-arithmetic-1.md  22-arithmetic-2.md  23-comparison.md  24-equality.md  25-syntactic-errors.md
course/03-evaluating-expressions/: 00-overview.md
src/: main.rs
tests/: README.md
tests/01-scanning/02-parentheses/: b.out  c.out  d.out
tests/01-scanning/03-braces/: a.out  c.out  d.out
tests/01-scanning/04-single-char-tokens/: a.lox  a.out  b.lox  b.out  c.lox  c.out  d.lox  d.out
tests/01-scanning/05-lexical-errors/: b.err  b.lox  c.lox  d.err  e.err  f.err  f.lox  f.out
tests/01-scanning/06-assignment-equality/: e.lox  e.out
tests/01-scanning/07-negation-inequality/: a.out  d.out  e.out
tests/01-scanning/08-relational/: a.out  c.lox  c.out  d.out  e.out
tests/01-scanning/09-division-comments/: c.lox  d.out  e.lox
tests/01-scanning/10-whitespace/: b.lox  c.lox  d.lox
tests/01-scanning/11-multiline-errors/: a.err  a.lox  a.out  b.err  (+3 more)
(+44 files in other folders)
